feat: 管理端计划编排/步骤弹窗规则联动 + 数据隔离 + UI规范补齐
1. 计划编排页(PlanEdit.vue): 列拖拽(sortablejs)、日期列后端跨页排序、
   弹窗分模块展示步骤、行操作按钮(编辑/复制/另存为模板/删除)、
   客群切换数据隔离、segmented UI与策略模板页统一
2. 策略模板/渠道向导步骤弹窗(双页面): 选规则自动带出条件字段(只读)、
   规则下拉value用r.id修复编辑回显、availableRules排除已配置规则、
   按客群loadRules隔离个贷/企业贷、编辑模式规则下拉禁用
3. 后端契约: RuleDTO新增id/fieldName字段、RuleQueryService补全toDTO、
   AdmissionExecutionPlanController#list加customerGroup+orderBy/orderDir参数
4. UI规范补齐: 表格height填充满容器(calc(100vh-320px))、
   策略模板操作列220→180收敛
5. 知识库: 追加D56条目 + 需求文档(docs/plans/)
6. H5/小程序UI优化: TabBar/AppIcon/home/index/product-list/Login

关联: D56 (2026-09-06)