@@ -9,14 +9,18 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Component;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.Duration;
+import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -38,6 +42,10 @@ import java.util.Map;
  * 本抽取器不抛异常，返回空 Map（与 Mock 行为一致），保证应用在无密钥环境下仍正常启动与上传。
  * 配置就绪后无需改代码即自动激活真实识别。</p>
  *
+ * <p><b>JDK 8 约束（红线）：</b>后端编译固定 JDK 8，本类不得使用 {@code java.net.http}、
+ * {@code List.of}、{@code String.isBlank}、{@code Path.of}、{@code Files.readString}
+ * 等 Java 9+ API；HTTP 调用统一走 {@link HttpURLConnection}。</p>
+ *
  * @author loan-platform
  */
 @Component
@@ -48,7 +56,7 @@ public class VlmOcrExtractor implements OcrExtractor {
     private static final ObjectMapper MAPPER = new ObjectMapper();
 
     /** 支持直接作为多模态内容传入的 MIME（图片 / PDF）。 */
-    private static final List<String> MULTIMODAL_MIME = List.of(
+    private static final List<String> MULTIMODAL_MIME = Arrays.asList(
             "image/png", "image/jpeg", "image/jpg", "image/webp", "image/bmp", "application/pdf");
 
     @Value("${loan.ocr.vlm.base-url:}")
@@ -72,7 +80,7 @@ public class VlmOcrExtractor implements OcrExtractor {
             log.warn("VLM 未配置（loan.ocr.vlm.base-url / api-key 缺失），降级返回空事实");
             return Collections.emptyMap();
         }
-        Path path = filePath == null ? null : Path.of(filePath);
+        Path path = filePath == null ? null : Paths.get(filePath);
         if (path == null || !Files.exists(path) || !Files.isRegularFile(path)) {
             log.warn("VLM 输入文件不存在或不可读: {}", filePath);
             return Collections.emptyMap();
@@ -89,7 +97,8 @@ public class VlmOcrExtractor implements OcrExtractor {
             return Collections.emptyMap();
         }
         try {
-            String dataUri = "data:" + mime + ";base64," + Base64.getEncoder().encodeToString(Files.readAllBytes(path));
+            String dataUri = "data:" + mime + ";base64,"
+                    + Base64.getEncoder().encodeToString(Files.readAllBytes(path));
             String json = callVisionModel(dataUri, bizType);
             return parseModelJson(json);
         } catch (Exception e) {
@@ -105,14 +114,19 @@ public class VlmOcrExtractor implements OcrExtractor {
 
     /** 配置是否就绪。 */
     private boolean isConfigured() {
-        return baseUrl != null && !baseUrl.isBlank() && apiKey != null && !apiKey.isBlank();
+        return !isBlank(baseUrl) && !isBlank(apiKey);
+    }
+
+    /** JDK 8 兼容的空白判断（替代 String#isBlank）。 */
+    private static boolean isBlank(String s) {
+        return s == null || s.trim().isEmpty();
     }
 
     /** MIME 探测（Files.probeContentType 可能为空，按扩展名兜底）。 */
     private String probeMime(Path path) {
         try {
             String p = Files.probeContentType(path);
-            if (p != null && !p.isBlank()) {
+            if (!isBlank(p)) {
                 return p;
             }
         } catch (IOException ignored) {
@@ -152,8 +166,8 @@ public class VlmOcrExtractor implements OcrExtractor {
     /** 文本 / 表格类文件：直接整文件作为文本传给模型抽取（避免 base64 体积浪费）。 */
     private Map<String, Object> extractFromTextFile(Path path) {
         try {
-            String text = Files.readString(path);
-            if (text.isBlank()) {
+            String text = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            if (isBlank(text)) {
                 return Collections.emptyMap();
             }
             String json = callTextModel(text, path.getFileName().toString());
@@ -167,39 +181,39 @@ public class VlmOcrExtractor implements OcrExtractor {
     /** 调用视觉多模态模型，要求仅返回 JSON。 */
     private String callVisionModel(String dataUri, String bizType) throws Exception {
         String prompt = buildPrompt(bizType);
-        Map<String, Object> body = new LinkedHashMap<>();
+        Map<String, Object> body = new LinkedHashMap<String, Object>();
         body.put("model", model);
-        Map<String, Object> userMsg = new LinkedHashMap<>();
+        Map<String, Object> userMsg = new LinkedHashMap<String, Object>();
         userMsg.put("role", "user");
-        Map<String, Object> contentImg = new LinkedHashMap<>();
+        Map<String, Object> contentImg = new LinkedHashMap<String, Object>();
         contentImg.put("type", "image_url");
-        Map<String, Object> imgUrl = new LinkedHashMap<>();
+        Map<String, Object> imgUrl = new LinkedHashMap<String, Object>();
         imgUrl.put("url", dataUri);
         contentImg.put("image_url", imgUrl);
-        Map<String, Object> contentText = new LinkedHashMap<>();
+        Map<String, Object> contentText = new LinkedHashMap<String, Object>();
         contentText.put("type", "text");
         contentText.put("text", prompt);
-        userMsg.put("content", List.of(contentText, contentImg));
-        body.put("messages", List.of(buildSystemMessage(), userMsg));
+        userMsg.put("content", Arrays.asList(contentText, contentImg));
+        body.put("messages", Arrays.asList(buildSystemMessage(), userMsg));
         body.put("temperature", 0.1);
         return postChatCompletions(body);
     }
 
     /** 调用文本模型（用于 CSV/JSON/文本）。 */
     private String callTextModel(String text, String fileName) throws Exception {
-        Map<String, Object> body = new LinkedHashMap<>();
+        Map<String, Object> body = new LinkedHashMap<String, Object>();
         body.put("model", model);
-        Map<String, Object> userMsg = new LinkedHashMap<>();
+        Map<String, Object> userMsg = new LinkedHashMap<String, Object>();
         userMsg.put("role", "user");
         userMsg.put("content", "以下是客户上传的文件（" + fileName + "）原文：\n\n" + text
                 + "\n\n请从中抽取客户经营事实并以 JSON 返回。");
-        body.put("messages", List.of(buildSystemMessage(), userMsg));
+        body.put("messages", Arrays.asList(buildSystemMessage(), userMsg));
         body.put("temperature", 0.1);
         return postChatCompletions(body);
     }
 
     private Map<String, Object> buildSystemMessage() {
-        Map<String, Object> m = new LinkedHashMap<>();
+        Map<String, Object> m = new LinkedHashMap<String, Object>();
         m.put("role", "system");
         m.put("content", defaultSystemPromptIfBlank());
         return m;
@@ -215,49 +229,95 @@ public class VlmOcrExtractor implements OcrExtractor {
     }
 
     private String defaultSystemPromptIfBlank() {
-        if (systemPrompt != null && !systemPrompt.isBlank()) {
+        if (!isBlank(systemPrompt)) {
             return systemPrompt;
         }
         return "你是信贷风控材料结构化抽取助手。只输出可被 JSON.parse 解析的纯 JSON 对象，"
                 + "字段值为字符串或数字，禁止输出任何解释性文字或代码块标记。";
     }
 
-    /** POST 到 chat/completions 并提取首条 assistant 文本。 */
+    /**
+     * POST 到 chat/completions 并提取首条 assistant 文本。
+     *
+     * <p>JDK 8 环境统一使用 {@link HttpURLConnection}（无第三方 HTTP 依赖）。</p>
+     */
     private String postChatCompletions(Map<String, Object> body) throws Exception {
         String payload = MAPPER.writeValueAsString(body);
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(baseUrl.endsWith("/") ? baseUrl + "v1/chat/completions" : baseUrl + "/v1/chat/completions"))
-                .timeout(Duration.ofMillis(timeoutMs))
-                .header("Content-Type", "application/json")
-                .header("Authorization", "Bearer " + apiKey)
-                .POST(HttpRequest.BodyPublishers.ofString(payload))
-                .build();
-        HttpClient client = HttpClient.newBuilder()
-                .connectTimeout(Duration.ofMillis(Math.min(timeoutMs, 10000)))
-                .build();
-        HttpResponse<String> resp = client.send(request, HttpResponse.BodyHandlers.ofString());
-        if (resp.statusCode() < 200 || resp.statusCode() >= 300) {
-            throw new IOException("VLM HTTP " + resp.statusCode() + ": " + resp.body());
+        String endpoint = baseUrl.endsWith("/")
+                ? baseUrl + "v1/chat/completions"
+                : baseUrl + "/v1/chat/completions";
+        HttpURLConnection conn = (HttpURLConnection) new URL(endpoint).openConnection();
+        try {
+            conn.setRequestMethod("POST");
+            conn.setRequestProperty("Content-Type", "application/json");
+            conn.setRequestProperty("Authorization", "Bearer " + apiKey);
+            conn.setDoOutput(true);
+            conn.setConnectTimeout((int) Math.min(timeoutMs, 10000L));
+            conn.setReadTimeout((int) timeoutMs);
+
+            OutputStream os = conn.getOutputStream();
+            try {
+                os.write(payload.getBytes(StandardCharsets.UTF_8));
+                os.flush();
+            } finally {
+                closeQuietly(os);
+            }
+
+            int status = conn.getResponseCode();
+            InputStream is = (status >= 200 && status < 300) ? conn.getInputStream() : conn.getErrorStream();
+            String respBody = is == null ? "" : readAll(is);
+            if (status < 200 || status >= 300) {
+                throw new IOException("VLM HTTP " + status + ": " + respBody);
+            }
+
+            JsonNode root = MAPPER.readTree(respBody);
+            JsonNode choices = root.get("choices");
+            if (choices == null || !choices.isArray() || choices.size() == 0) {
+                throw new IOException("VLM 返回无 choices");
+            }
+            JsonNode msg = choices.get(0).get("message");
+            if (msg == null) {
+                throw new IOException("VLM 返回无 message");
+            }
+            JsonNode content = msg.get("content");
+            if (content == null) {
+                throw new IOException("VLM 返回无 content");
+            }
+            return content.asText();
+        } finally {
+            conn.disconnect();
         }
-        JsonNode root = MAPPER.readTree(resp.body());
-        JsonNode choices = root.get("choices");
-        if (choices == null || !choices.isArray() || choices.isEmpty()) {
-            throw new IOException("VLM 返回无 choices");
+    }
+
+    /** 读取流全部内容（UTF-8）。 */
+    private static String readAll(InputStream is) throws IOException {
+        StringBuilder sb = new StringBuilder();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8));
+        try {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                sb.append(line).append('\n');
+            }
+        } finally {
+            closeQuietly(reader);
         }
-        JsonNode msg = choices.get(0).get("message");
-        if (msg == null) {
-            throw new IOException("VLM 返回无 message");
+        return sb.toString();
+    }
+
+    private static void closeQuietly(java.io.Closeable c) {
+        if (c == null) {
+            return;
         }
-        JsonNode content = msg.get("content");
-        if (content == null) {
-            throw new IOException("VLM 返回无 content");
+        try {
+            c.close();
+        } catch (IOException ignored) {
+            // 关闭失败不影响主流程
         }
-        return content.asText();
     }
 
     /** 将模型文本解析为字段 Map（兼容 ```json 代码块包裹）。 */
     private Map<String, Object> parseModelJson(String text) {
-        if (text == null || text.isBlank()) {
+        if (isBlank(text)) {
             return Collections.emptyMap();
         }
         String cleaned = text.trim();
@@ -272,15 +332,17 @@ public class VlmOcrExtractor implements OcrExtractor {
         try {
             JsonNode node = MAPPER.readTree(cleaned);
             if (node.isObject()) {
-                Map<String, Object> map = new LinkedHashMap<>();
-                node.fields().forEachRemaining(e -> {
+                Map<String, Object> map = new LinkedHashMap<String, Object>();
+                java.util.Iterator<Map.Entry<String, JsonNode>> it = node.fields();
+                while (it.hasNext()) {
+                    Map.Entry<String, JsonNode> e = it.next();
                     JsonNode v = e.getValue();
                     if (v.isNumber()) {
                         map.put(e.getKey(), v.numberValue());
                     } else if (!v.isNull()) {
                         map.put(e.getKey(), v.asText());
                     }
-                });
+                }
                 return map;
             }
         } catch (Exception e) {
